--- a/simpleToDoList/index.html
+++ b/simpleToDoList/index.html
@@ -14,7 +14,7 @@
             <h2>Stefan's List</h2>
             <div class="option">
                 <p class='all'>All</p>
-                <p class='checked'>Checked</p>
+                <button class='checked'>Checked</button>
                 <p class='dlt'>Dlt</p>
             </div>
             <div class="addItems">
