--- a/simpleToDoList/index.html
+++ b/simpleToDoList/index.html
@@ -13,9 +13,9 @@
         <div class="add">
             <h2>Stefan's List</h2>
             <div class="option">
-                <p class='all'>All</p>
-                <button class='checked'>Checked</button>
-                <p class='dlt'>Dlt</p>
+                <button class='all'>All</button>
+                <button class='completed'>Compl</button>
+                <button class='uncompleted'>Uncompl</button>
             </div>
             <div class="addItems">
                 <input placeholder="Add Item">
