--- a/simpleToDoList/index.html
+++ b/simpleToDoList/index.html
@@ -14,7 +14,7 @@
         <div class="add">
             <h2>Stefan's List</h2>
             <div class="option">
-            <select name='todos'>
+            <select name='items'>
                 <option value='all'>All</option>
                 <option value='completed'>Compl</option>
                 <option value='uncompleted'>Uncompl</option>
